fix wcag contrast error

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -888,6 +888,10 @@ a {
 		max-height: 5em;
 	}
     }
+
+    &.btn-info {
+	color: black;
+    }
 }
 
 // More a11y stuff
